--- a/milestone.html
+++ b/milestone.html
@@ -4,15 +4,16 @@
 		<meta charset="utf-8"> 
 		<title> GinaWebDev | Portfolio </title>
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/milestone.css">
+		<link rel="stylesheet" href="css/milestone.css"> 
+		<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:700|Open+Sans:400,700&display=swap" rel="stylesheet">
 	</head>
 	
 	<body>
-		<div class="welcome">
+		<div class="container">
 			<header>
 				<img src="img/computer-icon.png"	alt="computer-icon" />
-				<h1> Hello World, My name is <span> Gina Dynes. </span></h1>
-					<p> I'm a web developer and creative thinker <br> in Modesto, CA. </p>
+				<h1> Hello World,<br> My name is <span> Gina Dynes. </span></h1>
+					<p> I'm a web developer and creative<br> thinker in Modesto, CA. </p>
 						<nav>
 							<ul> 
 								<li><a href="#about">About</a></li>
@@ -27,13 +28,13 @@
 			<div class="full-width">
 				<h2> About </h2>  
 				<img src="img/headshot.png" alt="headshot" />
-					<p>I'm passionate about all things code! <br> I've been interested in Web Development for years, it wasn't until I found Skillcrush that I decided to leap and I'm so glad that I did. All aspects with code and design fascinate me, while the basis may be similar, no two projects are ever the same. I approach everyday with excitement to learn new things and to create new websites.<br> Can't wait to work with you!</p> 
+					<p><strong>I'm passionate about all things code!</strong> <br> I've been interested in Web Development for years, it wasn't until I found Skillcrush that I decided to leap and I'm so glad that I did. All aspects with code and design fascinate me, while the basis may be similar, no two projects are ever the same. I approach everyday with excitement to learn new things and to create new websites.<br> Can't wait to work with you!</p> 
 			</div>
 		</section>
 
 		<section id="portfolio">
 			<div class="full-width"> 
-				<h2> My Portfolio </h2>		
+				<h2><strong> My Portfolio</strong> </h2>		
 				<div class="third-width"> 
 					<img src="img/portfolio1.png" alt="portfolio1" />
 					<p> <strong>GinaWebDev Portfolio Project</strong><br>HTML 5 &amp; CSS Website <br> I chose to create a website for myself to further my web development skills and had a great time doing it!</p> 
@@ -51,5 +52,23 @@
 
 		<section id="contact">
 			<div class="full-width">
-				<h2> Let's Connect </h2>
-				<div class="third-width"
+				<h2>Let's Connect </h2>
+				<div class="third-width">
+					<p> Hire Me <br>(209)214-9634 <br><a href="mailto:ginawebdeveloper@gmail.com">ginawebdeveloper [@] gmail.com</a></p>
+				</div>
+				<div class="third-width">
+					<p>Follow Me <br></p>
+					<img src="img/github.png" alt="github-icon"/>
+					<img src="img/linkedin.png" alt="linkedin-icon"/>
+				</div>
+				<div class="third-width">
+					<p> Meet Me <br>Modesto, CA <br> Let's go to meetups together! </p>
+				</div>
+			</div>
+		</section>
+
+		<footer>
+			<p> Copyright 2018 | GinaWebDev </p>
+		</footer>
+	</body>
+</html>
