fixed footer and contact icons

--- a/milestone.html
+++ b/milestone.html
@@ -11,19 +11,18 @@
 	<body>
 		<div class="container">
 			<header>
-				<img src="img/computer-icon.png"	alt="computer-icon" />
-				<h1> Hello World,<br> My name is <span> Gina Dynes. </span></h1>
-					<p> I'm a web developer and creative<br> thinker in Modesto, CA. </p>
-						<nav>
-							<ul> 
-								<li><a href="#about">About</a></li>
-								<li><a href="#portfolio">Portfolio</a></li>
-								<li><a href="#contact">Contact</a></li>
-							</ul>
-						</nav>
+			<img src="img/computer-icon.png"	alt="computer-icon" />
+			<h1> Hello World,<br> My name is <span> Gina Dynes. </span></h1>
+				<p> I'm a web developer and creative<br> thinker in Modesto, CA. </p>
+					<nav>
+						<ul> 
+							<li><a href="#about">About</a></li>
+							<li><a href="#portfolio">Portfolio</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+					</nav>
 			</header>
-		</div> 
-
+		</div>
 		<section id="about">
 			<div class="full-width">
 				<h2> About </h2>  
@@ -54,12 +53,15 @@
 			<div class="full-width">
 				<h2>Let's Connect </h2>
 				<div class="third-width">
-					<p> Hire Me <br>(209)214-9634 <br><a href="mailto:ginawebdeveloper@gmail.com">ginawebdeveloper [@] gmail.com</a></p>
+					<p> Hire Me <br>(209)214-9634 <br>ginawebdeveloper [@] gmail.com</p>
 				</div>
 				<div class="third-width">
-					<p>Follow Me <br></p>
-					<img src="img/github.png" alt="github-icon"/>
-					<img src="img/linkedin.png" alt="linkedin-icon"/>
+					<p>Follow Me <br></p> 
+						<ul>
+							<li><a href=""><img src="img/github.png" alt="github-icon"/></a></li>
+							<li><a href=""><img src="img/linkedin.png" alt="linkedin-icon"/></a></li>
+							<li><a href=""><img src="img/twitter.png" alt="twitter-icon"/></a></li>
+						</ul>
 				</div>
 				<div class="third-width">
 					<p> Meet Me <br>Modesto, CA <br> Let's go to meetups together! </p>
@@ -67,8 +69,8 @@
 			</div>
 		</section>
 
-		<footer>
-			<p> Copyright 2018 | GinaWebDev </p>
-		</footer>
+			<footer>
+				<p> Copyright 2018 | GinaWebDev </p>
+			</footer>
 	</body>
 </html>
